# ML_ContinualLearningVis

./: .gitignore  Lucid-pretrained-resnet20-cifar100.ipynb  Readme.md  adversarial_dreams.py  cl_loop.py  clearModels.sh  dreams.py  fix_poetry_setuptools.py  install_libs.sh  latent_dreams.py  main.py  main_experiments.py  multidimensional_dreams.py  my_parser.py  pyproject.toml  simple_train_loop.py  test.py  update_system.sh  vgg_params.py
config/: default.py
datamodule/: CLModule.py  dream_sets.py  pairing.py
dataset/: CLModule.py  dream_sets.py  pairing.py
dream/: custom_render.py  image.py  transform.py
executor/: cl_loop.py
log_console/: console_log_12-04-2024.txt  console_log_21-04-2024.txt  log_console_16-04-2024.txt  log_console_18-04-2024-v2.txt  log_console_18-04-2024.txt  log_console_19-04-2024.txt  log_console_19-04-2024_v2.txt  log_console_20-04-2024.txt  log_console_20-04-2024_v2.txt  log_console_22-04-2024.txt  log_console_22-04-2024_v2.txt  log_console_22-04-2024_v3.txt  log_console_23-04-2024.txt  log_console_23-04-2024_v2.txt  log_console_24-04-2024.txt  log_console_24-04-2024_v2.txt  log_console_25-04-2024.txt  log_console_28-04-2024.txt  log_console_29-04-2024.txt
loss_function/: activation_layer.py  chiLoss.py  image_regularization.py  layer_loss.py  layerloss.py  point_scope.py
model/: DLA.py  ResNet.py  SAE.py  activation_layer.py  base.py  model_base.py  overlay.py  vgg.py
other/: chi_distr_plot.py  chi_loss_plot.py  cholesky_decomp.py  show_img_channel.py
robustness/: attack_steps.py  attacker.py  data_augmentation.py  loaders.py  (+5 more)
(+70 files in other folders)
