[tool.poetry]
name = "continual_dreaming"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.1"
torch = "^1.10.2"
torchvision = "^0.11.3"
torchaudio = "^0.10.2"
robustness = "^1.2.1"
notebook = "^6.4.8"
ipywidgets = "^7.6.5"
cox = "^0.1.post3"
pytorch-lightning = "^1.5.10"
wandb = "^0.12.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
